<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">ChatApp</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="enter">Enter</string>
	<string name="send">Send</string>
	<string name="cancel">Cancel</string>
	
	<!-- Preference -->
	<string name="pref_title">Chat Preference</string>
	<string name="pref_chat_setting_cat">Chat Setting</string>
	<string name="pref_name_title">Name</string>
	<string name="pref_name_sum">Your Username is: </string>
	<string name="pref_vibrate_title">Vibrate</string>
	<string name="pref_vibrate_sum">Phone vibrates on message received</string>
	<string name="pref_ringtone_title">Notification Ringtone</string>
	<string name="pref_ringtone_sum">Currently using: </string>
	<string name="pref_lang_title">Language</string>
	<string name="pref_lang_sum">Currently using: </string>
	<string name="pref_lang_default">EN-US</string>
	<string name="pref_userid_title">User Id</string>
	<string name="pref_userid_sum">This is your ID: </string>
	<string name="pref_userid_default">User Id Not Initialised</string>
	
    <string name="pref_gm_title">Global Chat Messages</string>
    <string name="pref_gm_sum_udp">Messages sent via UDP</string>
    <string name="pref_gm_sum_mc">Messages sent via Multicast</string>
    <string name="pref_gm_default">UDP</string>
    <string name="pref_gm_udp">UDP</string>
    <string name="pref_gm_mc">Multicast</string>
	
	<string name="pref_key_name">pref_key_name</string>
	<string name="pref_key_gm">pref_key_gm</string>
	<string name="pref_key_vibrate">pref_key_vibrate</string>
	<string name="pref_key_ringtone">pref_key_ringtone</string>
	<string name="pref_key_lang">pref_key_lang</string>
	<string name="pref_key_userid">pref_key_userid</string>
	
	<!-- Optons menu -->
	<string name="menu_pref">Preferences</string>		
	<string name="menu_ping">Refresh Users</string>
	<string name="menu_ping_toast">Refreshing Users</string>
	
	<!-- Log in screen -->
	<string name="login_username">Username</string>
	<string name="login_username_hint">Please enter a username</string>
	<string name="login_btn_enter">Begin Chatting</string>
	<string name="login_username_empty">Please enter a username with at least one character</string>

	<!-- General Chat screen -->
	<string name="chat_said"> said</string>
	<string name="chat_empty">No chat history</string>
	
	<!-- Tab screen -->
	<string name="tab_globalchat">Global Chat</string>
	<string name="tab_users">Users</string>
	<string name="tab_privatechat">Private Chat</string>
	
	<!-- User tab -->
	<string name="user_online_heading">Online Users</string>
	<string name="user_offline_heading">Offline Users</string>
	<string name="user_online_none">No online users</string>
	<string name="user_offline_none">No offline users</string>
	<string name="user_offline_lastseen">Last online:</string>
	
	<!-- Private chat tab -->
	
	
	<!-- User context menu items -->
	<string name="user_menu_ping">Check if online</string>
	<string name="user_menu_chat">Chat with user</string>
	
	<!-- Private chat tab -->
	<string name="priv_chat_empty">No private conversations</string>
	
	<!-- Private chat screen -->
	<string name="priv_chat_title">Chatting with</string>	
	<string name="priv_chat_attach">Send Attachment</string>	
	
	<!-- Attachment dialog -->
	<string name="att_title">Photo</string>	
	<string name="att_photo">Photo</string>	
	<string name="att_audio">Audio</string>	
	<string name="att_video">Video</string>	
	<string name="att_file">File</string>	

	<!-- Wifi Dialog -->
	<string name="dialog_wifi_title">WiFi Connection Required</string>
	<string name="dialog_wifi_message">ChatApp requires an active WiFi connection to function</string>
	<string name="dialog_wifi_accept">Go to WiFi settings</string>
	<string name="dialog_wifi_decline">Continue in offline mode</string>
	<string name="dialog_wifi_dismiss">Dismiss</string>
	
	
</resources>
