<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/pref_chat_setting_cat"
        android:key="pref_key_storage_settings">
	    <EditTextPreference
	        android:key="@string/pref_key_name"
	        android:title="@string/pref_name_title" 
	        android:summary="@string/pref_name_sum"
	        android:defaultValue="" />    
	    <CheckBoxPreference
	        android:key="@string/pref_key_vibrate"
	        android:title="@string/pref_vibrate_title"
	        android:summary="@string/pref_vibrate_sum"
	        android:defaultValue="true" />
	    <RingtonePreference
		    android:key="@string/pref_key_ringtone"
		    android:ringtoneType="notification"
		    android:summary="@string/pref_ringtone_sum"
		    android:title="@string/pref_ringtone_title" >
		</RingtonePreference>
		<ListPreference
	        android:key="@string/pref_key_lang"
	        android:title="@string/pref_lang_title"
	        android:summary="@string/pref_lang_sum"
	        android:entries="@array/langEntries"
	        android:entryValues="@array/langValues" 
	        android:defaultValue="@string/pref_lang_default">
	    </ListPreference>
	    <EditTextPreference
	        android:key="@string/pref_key_userid"
	        android:title="@string/pref_userid_title"
	        android:summary="@string/pref_userid_sum"
	        android:enabled="false" 
    		android:selectable="true"	        
	        android:defaultValue="@string/pref_userid_default" />
    <!-- <ListPreference
        android:dependency="pref_sync"
        android:key="pref_syncConnectionType"
        android:title="@string/pref_syncConnectionType"
        android:dialogTitle="@string/pref_syncConnectionType"
        android:entries="@array/pref_syncConnectionTypes_entries"
        android:entryValues="@array/pref_syncConnectionTypes_values"
        android:defaultValue="@string/pref_syncConnectionTypes_default" /> -->
    </PreferenceCategory>
</PreferenceScreen>