<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/login_user_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/login_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_user_text"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/login_username_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_btn_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/enter" />

</RelativeLayout>
